// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Circle should render 1`] = `
<div>
  <div
    class="Circle-uw7h4j-0 uoihF"
  />
</div>
`;

exports[`Circle should render as avatar 1`] = `
<div>
  <div
    class="Circle-uw7h4j-0 eYjjJQ"
  />
</div>
`;

exports[`Circle should render as blank 1`] = `
<div>
  <div
    class="Circle-uw7h4j-0 uoihF"
  />
</div>
`;

exports[`Circle should render extra-large 1`] = `
<div>
  <div
    class="Circle-uw7h4j-0 hwAEqc"
  />
</div>
`;

exports[`Circle should render large 1`] = `
<div>
  <div
    class="Circle-uw7h4j-0 cPaasd"
  />
</div>
`;

exports[`Circle should render small 1`] = `
<div>
  <div
    class="Circle-uw7h4j-0 UHgwx"
  />
</div>
`;

exports[`Circle should render with content 1`] = `
<div>
  <div
    class="Circle-uw7h4j-0 UHgwx"
  >
    <div
      data-testid="circle__content"
    />
  </div>
</div>
`;

exports[`Circle should render with no shadow 1`] = `
<div>
  <div
    class="Circle-uw7h4j-0 bMFmZf"
  />
</div>
`;
